Fix the Line Sticking Out at the top

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,8 @@ header {
 }
 
 .tl_block {
-	position: relative;;
+	position: relative;
+	top: -1px;
 	width: 100%;
 	margin-bottom: 20px;
 	min-height: 100px; 
